--- a/skills/csharp/calendarskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/calendarskill/wwwroot/manifest/manifest-1.1.json
@@ -105,7 +105,7 @@
         "$ref": "#/definitions/eventInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/operationStatus"
+        "$ref": "#/definitions/actionResult"
       }
     },
     "updateEvent": {
@@ -116,7 +116,7 @@
         "$ref": "#/definitions/updateEventInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/operationStatus"
+        "$ref": "#/definitions/actionResult"
       }
     },
     "showEvent": {
@@ -138,7 +138,7 @@
         "$ref": "#/definitions/chooseEventInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/operationStatus"
+        "$ref": "#/definitions/actionResult"
       }
     },
     "deleteEvent": {
@@ -149,7 +149,7 @@
         "$ref": "#/definitions/chooseEventInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/operationStatus"
+        "$ref": "#/definitions/actionResult"
       }
     },
     "joinEvent": {
@@ -160,7 +160,7 @@
         "$ref": "#/definitions/chooseEventInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/operationStatus"
+        "$ref": "#/definitions/actionResult"
       }
     },
     "timeRemaining": {
@@ -297,21 +297,12 @@
         }
       }
     },
-    "operationStatus": {
+    "actionResult": {
       "type": "object",
       "properties": {
-        "status": {
+        "actionSuccess": {
           "type": "boolean",
-          "description": "An operation status indicating success or failure"
-        }
-      }
-    },
-    "timeRemainingOutput": {
-      "type": "object",
-      "properties": {
-        "remainingTime": {
-          "type": "number",
-          "description": "The remaining time in minutes"
+          "description": "Result of action"
         }
       }
     },
@@ -328,10 +319,78 @@
         }
       }
     },
+    "timeRemainingOutput": {
+      "type": "object",
+      "properties": {
+        "remainingTime": {
+          "type": "number",
+          "description": "The remaining time in minutes"
+        }
+      }
+    },
+    "eventInfoOutput": {
+      "type": "object",
+      "required": [],
+      "properties": {
+        "title": {
+          "type": "string",
+          "description": "Title of the meeting"
+        },
+        "content": {
+          "type": "string",
+          "description": "Description of the meeting"
+        },
+        "attendees": {
+          "type": "string",
+          "description": "Semicolon separated list of email addresses to invite"
+        },
+        "startDate": {
+          "type": "string",
+          "description": "Start date of the meeting in yyyy-MM-dd format"
+        },
+        "startTime": {
+          "type": "string",
+          "description": "Start time of the meeting in HH:mm format"
+        },
+        "endDate": {
+          "type": "string",
+          "description": "End date of the meeting in yyyy-MM-dd format"
+        },
+        "endTime": {
+          "type": "string",
+          "description": "End time of the meeting in HH:mm format"
+        },
+        "duration": {
+          "type": "number",
+          "description": "The duration of the meeting in minutes"
+        },
+        "location": {
+          "type": "string",
+          "description": "The location for the meeting"
+        },
+        "timezone": {
+          "type": "string",
+          "description": "The timezone to create the meeting in"
+        },
+        "actionSuccess": {
+          "type": "boolean",
+          "description": "Result of action"
+        }
+      }
+    },
     "eventSummary": {
-      "type": "array",
-      "items": {
-        "$ref": "#/definitions/eventInfo"
+      "type": "object",
+      "properties": {
+        "actionSuccess": {
+          "type": "boolean",
+          "description": "Result of action"
+        },
+        "eventList": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/eventInfo"
+          }
+        }
       }
     }
   }
