--- a/skills/csharp/experimental/bingsearchskill/BingSearchSkill.csproj
+++ b/skills/csharp/experimental/bingsearchskill/BingSearchSkill.csproj
@@ -26,10 +26,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Content\MovieCard.1.0.json" />
-    <EmbeddedResource Include="Content\PersonCard.1.0.json" />
-    <EmbeddedResource Include="Content\MovieCard.json" />
-    <EmbeddedResource Include="Content\PersonCard.json" />
+    <None Include="Content\MovieCard.1.0.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Content\MovieCard.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Content\PersonCard.1.0.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Content\PersonCard.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
