--- a/skills/csharp/experimental/musicskill/wwwroot/manifest/manifest-1.0.json
+++ b/skills/csharp/experimental/musicskill/wwwroot/manifest/manifest-1.0.json
@@ -31,7 +31,7 @@
         "$ref": "#/definitions/searchInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/operationStatus"
+        "$ref": "#/definitions/actionResult"
       }
     },
     "message": {
@@ -44,16 +44,16 @@
       "type": "object",
       "required": [],
       "properties": {
-        "info": {
+        "musicInfo": {
           "type": "string",
           "description": "Information used to search the music catalogue, e.g. artist name"
         }
       }
     },
-    "operationStatus": {
+    "actionResult": {
       "type": "object",
       "properties": {
-        "status": {
+        "actionSuccess": {
           "type": "boolean",
           "description": "An operation status indicating success or failure"
         }
