--- a/skills/csharp/experimental/musicskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/experimental/musicskill/wwwroot/manifest/manifest-1.1.json
@@ -61,16 +61,16 @@
       "type": "object",
       "required": [],
       "properties": {
-        "info": {
+        "musicInfo": {
           "type": "string",
           "description": "Information used to search the music catalogue, e.g. artist name"
         }
       }
     },
-    "operationStatus": {
+    "actionResult": {
       "type": "object",
       "properties": {
-        "status": {
+        "actionSuccess": {
           "type": "boolean",
           "description": "An operation status indicating success or failure"
         }
