update todo skill to latest sdk and solutions lib

--- a/skills/csharp/todoskill/appsettings.json
+++ b/skills/csharp/todoskill/appsettings.json
@@ -20,7 +20,7 @@
     "key": ""
   },
   "cosmosDb": {
-    "collectionId": "botstate-collection",
+    "containerId": "botstate-collection",
     "databaseId": "botstate-db",
     "cosmosDBEndpoint": "",
     "authKey": ""
